Sun Jan  5 14:38:21 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/token.c:
	- added tds_process_simple_query to libtds
	* src/odbc/odbc.c:
	- use tds_process_simple_query fixing some problems
	* src/odbc/unittests/t0003.c: cleanup

Sun Jan  5 11:27:41 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/error.c src/odbc/odbc.c:
	- more SQLError to error.c file
	- added SQLGetDiagRec function (error.c)

Sat Jan  4 14:05:55 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/cspublic.h src/ctlib/cs.c src/ctlib/ct.c:
	* src/dblib/bcp.c src/odbc/connectparams.c:
	* src/odbc/odbc_util.c src/odbc/prepare_query.c:
	- cleanup compiling with a C++ compiler
	* src/odbc/odbc.c:
	- cleanup compiling with a C++ compiler
	- fix memory leak during connect
	- added some FIXME
	- fix reading of some possibly not terminated string
	- fix a possible buffer overflow in SQLError

Sat Jan  4 11:34:49 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c src/ctlib/unittests/t0002.c:
	- set also curr_resinfo for STATUS_RESULT
	- more check for sp_who call

Sat Jan  4 10:52:09 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c: cleanup

Fri Jan  3 18:29:27 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/tds.h src/ctlib/ct.c src/tds/token.c
	- moved ctlib return status row support from libtds to libctl

Fri Jan  3 19:27:54 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/error.c src/odbc/odbc.c:
	* src/odbc/odbc_util.c:
	- improve error support

Fri Jan  3 15:35:45 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/Makefile.am src/odbc/odbc.c:
	* src/odbc/odbc_util.c src/odbc/error.c(added):
	- added INIT_HDBC and INIT_HENV macros
	- use numeric errors for ODBC
	- split error code from utils into error.c
	- updated all error code adding some more codes
	- add support for ODBC 3 driver
