@@ -6,7 +6,7 @@
 #include <ctpublic.h>
 #include "common.h"
 
-static char software_version[] = "$Id: t0002.c,v 1.6 2003/01/04 10:35:40 freddy77 Exp $";
+static char software_version[] = "$Id: t0002.c,v 1.7 2003/01/05 14:29:38 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 static int sp_who(CS_COMMAND *cmd);
@@ -254,6 +254,8 @@ sp_who(CS_COMMAND *cmd)
 				
 				for (i=0; i < num_cols; i++) { /* data */
 					char fmt[40];
+					if (col[i].ind)
+						continue;
 					sprintf(fmt, "%%-%d.%ds  ", col[i].datalength, col[i].datafmt.maxlength);
 					printf(fmt, col[i].data);
 					if (is_status_result && strcmp(col[i].data,"0")) {
